apps/postgresql/helm/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: istio-tcp-gateway
  namespace: istio-system
spec:
  selector:
    # app: istio-gateway
    istio: gateway
  servers:
  - hosts:
    - app.dev.corus-ai.net
    port:
      number: 5432
      name: postgresql
      protocol: TCP
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: postgresql
  namespace: postgresql
spec:
  hosts:
  - app.dev.corus-ai.net
  gateways:
  - istio-system/istio-tcp-gateway
  # - mesh # applies to all the sidecars in the mesh
  tcp:
  - match:
    - port: 5432
    route:
  # - route:
    - destination:
        port:
          number: 5432
        host: postgresql-postgresql-ha-pgpool.postgresql.svc.cluster.local
